test-cases/negative/test_023_for_without_each.lay
# negative test: for without 'each' keyword
# expected: error should be thrown

for item in list do
  print item


